# dynamic-dns-client-for-cloudflare

./: .editorconfig  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.toml  renovate.json  rustfmt.toml
.github/workflows/: build.yml  linux.yml  macos.yml  windows.yml
changelog/: 0.1.0.md  0.1.1.md  0.1.2.md  0.1.3.md  0.1.4.md  0.1.5.md  0.1.6.md  0.1.7.md  0.1.8.md  1.0.0.md  1.1.0.md
resources/tests/cloudflare/: dns_record.json  dns_record_update.json  failure.json  failure.txt  zone.json
resources/tests/ip/: v4.csv  v6.csv
scripts/: fetch-github-artifacts.sh
src/: config.rs  main.rs
src/api/: cloudflare.rs  ip.rs  mod.rs
src/api/cloudflare/: api_error.rs  api_response.rs  api_result.rs  client.rs  dns_record.rs  dns_record_type.rs  mod.rs  zone.rs
tests/: version.rs
