[package]
name = "dynamic-dns-client-for-cloudflare"
description = "A CLI utility to update the A and AAAA DNS records of a domain managed by Cloudflare, from the executing system's current public IP address"
version = "0.1.6"
authors = ["Joel Smith <j.d.smith@outlook.com.au>"]
edition = "2018"
license = "MIT"
repository = "https://gitlab.com/Kage-Yami/dynamic-dns-client-for-cloudflare"
readme = "README.md"
keywords = ["cli", "utility", "dns", "cloudflare"]
categories = ["command-line-utilities"]

include = ["resources/*", "src/*", "tests/*", "Cargo.toml", "CHANGELOG.md", "LICENSE", "README.md"]

[[bin]]
name = "ddns-for-cloudflare"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.37"
argh = "0.1.4"
serde = { version = "1.0.120", features = ["derive"] }
ureq = { version = "2.0.0", features = ["json"] }

[build-dependencies]

[dev-dependencies]
version-sync = "0.9.1"

[profile.release]
lto = true
